[fix]: bio_info visible issue

--- a/mediaquery.css
+++ b/mediaquery.css
@@ -77,23 +77,24 @@
   }
 
   .bio_info {
-    display: flex !important;
+    /* display: flex !important;
     flex-direction: column;
-    gap: 5rem;
+    gap: 5rem; */
     width: 100%;
     overflow: auto;
+    top: 0;
     left: 0;
     height: 100vh;
     max-height: 100vh;
     margin-top: 5rem !important;
   }
 
-  .bio_info > div:not(:first-child):not(:last-child) {
+  /* .bio_info > div:not(:first-child):not(:last-child) {
     border-top: 1px solid;
     padding-top: 0.5rem;
-  }
+  } */
 
-  /* .bio_info > div {
+  .bio_info > div {
     margin-bottom: 0.5rem;
     padding-bottom: 3.5rem !important;
     overflow: hidden;
@@ -108,7 +109,7 @@
   .bio_info > div:nth-last-child(-n + 2) {
     padding-bottom: 0;
     border-bottom: none;
-  } */
+  }
 
   .bio__1 {
     font-size: 2rem;
@@ -217,23 +218,23 @@
   }
 
   .bio_info {
-    display: flex !important;
+    /* display: flex !important;
     flex-direction: column;
-    gap: 5rem;
+    gap: 5rem; */
     width: 100%;
     overflow: auto;
-    /* top: 0;
-    left: 0; */
-    height : 100vh;
-    max-height : 100vh;
-    margin-top : 5rem !important;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    max-height: 100vh;
+    margin-top: 5rem !important;
   }
 
-  .bio_info > div:not(:first-child):not(:last-child) {
+  /* .bio_info > div:not(:first-child):not(:last-child) {
     border-top: 1px solid;
     padding-top: 0.5rem;
-  }
-  /* .bio_info > div {
+  } */
+  .bio_info > div {
     margin-bottom: 0.5rem;
     padding-bottom: 3.3rem !important;
     overflow: hidden;
@@ -248,7 +249,7 @@
 
   .bio_info > div:nth-last-child(-n + 2) {
     border-bottom: none;
-  } */
+  }
 
   .bio__1 {
     font-size: 2rem;
